fix: hide add buttin when player has joined game

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/PlayersFragment.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/PlayersFragment.axaml
@@ -75,7 +75,7 @@
                                                 Height="140"
                                                 Classes="card"
                                                 Background="{DynamicResource SurfaceBrush}"
-                                                IsVisible="{Binding IsLocalPlayer}">
+                                                IsVisible="{Binding CanAddUnit}">
                                             <Button Content="+"
                                                     FontSize="48"
                                                     FontWeight="Bold"
