--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/AvailableUnitsTable.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/AvailableUnitsTable.axaml
@@ -103,7 +103,7 @@
             <Button Grid.Row="3"
                     Content="Add Unit"
                     Command="{Binding AddUnitCommand}"
-                    IsEnabled="{Binding CanAddUnitNow}"
+                    IsEnabled="{Binding CanAddUnit}"
                     Classes="primary"
                     HorizontalAlignment="Stretch"
                     Margin="0,10,0,0"/>
