--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitItemControl.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitItemControl.axaml
@@ -7,23 +7,22 @@
              x:Class="Sanet.MakaMek.Avalonia.Controls.UnitItemControl"
              x:DataType="units:UnitData">
     <Border Classes="card" 
-            Padding="8"
-            Width="120"
-            Height="140"
+            Padding="5"
+            Width="100"
+            Height="120"
             Background="{DynamicResource SurfaceBrush}">
         <StackPanel Spacing="4">
             <!-- Unit Image -->
-            <Border Width="100" 
-                    Height="100"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center">
-                <Image x:Name="UnitImage"
-                       Width="100"
-                       Height="100"
-                       Stretch="Fill"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"/>
-            </Border>
+            
+            <Image x:Name="UnitImage"
+                   Width="84"
+                   Height="84"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center">
+                <Image.RenderTransform>
+                    <RotateTransform Angle="180"/>
+                </Image.RenderTransform>
+            </Image>
             
             <!-- Model Name -->
             <TextBlock Text="{Binding Model}" 
