chore: clean up heat modifiers ui

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitMovementInfoPanel.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitMovementInfoPanel.axaml
@@ -6,17 +6,17 @@
              xmlns:converters="clr-namespace:Sanet.MakaMek.Avalonia.Converters;assembly=Sanet.MakaMek.Avalonia"
              x:DataType="units:Unit"
              x:Class="Sanet.MakaMek.Avalonia.Controls.UnitMovementInfoPanel"
-             mc:Ignorable="d">
+             mc:Ignorable="d"
+             IsVisible="{Binding HasMoved}">
     <UserControl.Resources>
         <converters:CollectionToVisibilityConverter x:Key="CollectionToVisibilityConverter"/>
         <converters:ModifierToTextConverter x:Key="ModifierToTextConverter"/>
     </UserControl.Resources>
-    <StackPanel Spacing="2" Orientation="Vertical">
+    <StackPanel Spacing="5" Orientation="Vertical">
         <Border Background="#20000000"
             CornerRadius="4"
-            Padding="10"
-            IsVisible="{Binding HasMoved}">
-       
+            Padding="5"
+            >
             <Grid ColumnDefinitions="*,*,*" RowDefinitions="Auto,Auto">
                 <TextBlock Grid.Row="0" Grid.Column="0"
                          Text="Type"
@@ -41,11 +41,10 @@
         </Border>
          <!-- Movement Penalties Section -->
         <ItemsControl ItemsSource="{Binding MovementModifiers}"
-                       IsVisible="{Binding MovementModifiers, Converter={StaticResource CollectionToVisibilityConverter}}"
-                       Margin="0,10,0,0">
+                       IsVisible="{Binding MovementModifiers, Converter={StaticResource CollectionToVisibilityConverter}}">
           <ItemsControl.ItemsPanel>
              <ItemsPanelTemplate>
-                 <WrapPanel ItemSpacing="2" LineSpacing="2" Orientation="Horizontal"/>
+                 <WrapPanel Margin="0,10" ItemSpacing="2" LineSpacing="2" Orientation="Horizontal"/>
              </ItemsPanelTemplate>
           </ItemsControl.ItemsPanel>
           <ItemsControl.ItemTemplate>
